data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1269.wast
;; 10. **Loop Continuation with Recursive Imported Calls**:    - **Description**: Module A has a loop that calls an imported function from module B, which recursively calls back into another function of module A before returning control to the loop. Verify the stack depth and reinitialization.    - **Constraint**: Ensure that recursion across module boundaries does not corrupt the loop's continuation or the WebAssembly stack.  By testing the scenarios described above, we can identify if inconsistencies arise due to incorrect handling of control flow across module boundaries in different WebAssembly implementations.

(assert_invalid
  (module
    (import "modB" "funcB" (func $funcB))
    (func $funcA
      (loop (result i32)
        (call $funcB)
        (i32.const 1)
        br 0
      )
    )
    (func (export "exportedFunc") (call $funcA))
  )
  "type mismatch"
)